config endpoint definition
