# src/app/core/openapi/lingua-poly/api/api.ts
@@ -1,3 +1,5 @@
+export * from './core.service';
+import { CoreService } from './core.service';
 export * from './users.service';
 import { UsersService } from './users.service';
-export const APIS = [UsersService];
+export const APIS = [CoreService, UsersService];
