# src/app/core/openapi/lingua-poly/model/config.ts
@@ -1,0 +1,18 @@
+/**
+ * Lingua::Poly OpenAPI WebApp
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface Config { 
+    googleClientId?: string;
+    facebookClientId?: string;
+}
+
